// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <Media
        defaultMatches={true}
        query={
                Object {
                        "maxWidth": 1023,
                      }
        }
>
        [Function]
</Media>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": [Function],
        "defaultMatches": true,
        "query": Object {
          "maxWidth": 1023,
        },
      },
      "ref": null,
      "rendered": [Function],
      "type": [Function],
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <Media
          defaultMatches={true}
          query={
                    Object {
                              "maxWidth": 1023,
                            }
          }
>
          [Function]
</Media>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": [Function],
          "defaultMatches": true,
          "query": Object {
            "maxWidth": 1023,
          },
        },
        "ref": null,
        "rendered": [Function],
        "type": [Function],
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MediaRoutes renders desktop 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoadableComponent
    Content={null}
    changeContent={[Function]}
    closeDrawer={[Function]}
    data={
        Array [
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 0,
              "meta": "Joseph",
              "title": "About Me",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#292929",
              "id": 1,
              "meta": "Certified",
              "title": "ReactJS",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#F0DB4F",
              "id": 2,
              "meta": "Favorite Language",
              "title": "JavaScript",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "#5159BF",
              "fill": "#292929",
              "id": 3,
              "meta": "Framework",
              "title": "Redux",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 4,
              "meta": "Problem Solving",
              "title": "Algorithms",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 5,
              "meta": "Career",
              "title": "Work Experience",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 6,
              "meta": "Code as a hobby",
              "title": "Python",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 7,
              "meta": "Value Creation",
              "title": "Hacks",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#C92F00",
              "id": 8,
              "meta": "Acknowledgments",
              "title": "Winner of...",
            },
            Object {
              "Component": [Function],
              "Content": [Function],
              "backgroundFill": "tomato",
              "fill": "#273B7A",
              "id": 9,
              "meta": "Life as a React Developer",
              "title": "Currently",
            },
          ]
    }
    history={
        Object {
            "push": [Function],
          }
    }
    location={Object {}}
    match={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "error": null,
      "isLoading": true,
      "pastDelay": false,
      "retry": [Function],
      "timedOut": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "error": null,
        "isLoading": true,
        "pastDelay": false,
        "retry": [Function],
        "timedOut": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MediaRoutes renders mobile 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoadableComponent
    Content={null}
    changeContent={[Function]}
    closeDrawer={[Function]}
    data={
        Array [
            Object {
              "backgroundFill": "tomato",
              "description": "The description goes here. The quick brown fox, jumps over the lazy dog
              The description goes here. The quick brown fox, jumps over the lazy dog",
              "fill": "#273B7A",
              "meta": "CodeJam",
              "title": "April, 2018",
            },
            Object {
              "backgroundFill": "tomato",
              "description": "The description goes here. The quick brown fox, jumps over the lazy dog",
              "fill": "#273B7A",
              "meta": "Hash Code",
              "title": "March, 2018",
            },
            Object {
              "backgroundFill": "tomato",
              "description": "The description goes here. The quick brown fox, jumps over the lazy dog",
              "fill": "#273B7A",
              "meta": "React Certificate",
              "title": "January, 2018",
            },
            Object {
              "backgroundFill": "tomato",
              "description": "The description goes here. The quick brown fox, jumps over the lazy dog",
              "fill": "#C92F00",
              "meta": "Volvo Group",
              "title": "January, 2018",
            },
            Object {
              "backgroundFill": "tomato",
              "description": "The description goes here. The quick brown fox, jumps over the lazy dog",
              "fill": "#273B7A",
              "meta": "Open Hack Winner",
              "title": "November, 2017",
            },
            Object {
              "backgroundFill": "#5159BF",
              "description": "The description goes here. The quick brown fox, jumps over the lazy dog",
              "fill": "#292929",
              "meta": "Consultant",
              "title": "October, 2016",
            },
            Object {
              "backgroundFill": "tomato",
              "description": "The description goes here. The quick brown fox, jumps over the lazy dog",
              "fill": "#292929",
              "meta": "M.Sc. in Science with Major in Entepreneurship and Business Design",
              "title": "June, 2016",
            },
            Object {
              "backgroundFill": "tomato",
              "description": "The description goes here. The quick brown fox, jumps over the lazy dog",
              "fill": "#F0DB4F",
              "meta": "CTO, Co-founder",
              "title": "January, 2016",
            },
            Object {
              "backgroundFill": "tomato",
              "description": "The description goes here. The quick brown fox, jumps over the lazy dog",
              "fill": "#273B7A",
              "meta": "Project Engineer",
              "title": "March, 2013",
            },
            Object {
              "backgroundFill": "tomato",
              "description": "The description goes here. The quick brown fox, jumps over the lazy dog",
              "fill": "#273B7A",
              "meta": "B.Sc. in Science with Major in Electronics Engineering",
              "title": "December, 2012",
            },
          ]
    }
    history={
        Object {
            "push": [Function],
          }
    }
    location={Object {}}
    match={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "error": null,
      "isLoading": true,
      "pastDelay": false,
      "retry": [Function],
      "timedOut": false,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "error": null,
        "isLoading": true,
        "pastDelay": false,
        "retry": [Function],
        "timedOut": false,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
